Refactor: Replace YAML-based configuration with TOML files and remove unused rank progression logic. Modernize configuration handling and simplify rank-related operations.